--- a/botfiles/.env
+++ b/botfiles/.env
@@ -1,3 +1,3 @@
-BOT_TOKEN=PASTE_HERE
+BOT_TOKEN=MTI4OTY4NzI0OTI2NDU3ODY2MA.GGW4sq.eeOxFHsi4_CRCvr3sFOo6TkCiHqfuwHGDtxvM8
 GENERATE_INVITE_BOT=false
-GDPS_KEY=aBx0199
+GDPS_KEY=20854
