--- a/botfiles/.env
+++ b/botfiles/.env
@@ -1,3 +1,3 @@
-BOT_TOKEN=MTI4OTY4NzI0OTI2NDU3ODY2MA.GGW4sq.eeOxFHsi4_CRCvr3sFOo6TkCiHqfuwHGDtxvM8
+BOT_TOKEN=MTI4OTY4NzI0OTI2NDU3ODY2MA.GLqmbY.I5irkY3Rn5k3Lbh94dgV86G7K8fBy1Bh9ep5uI
 GENERATE_INVITE_BOT=false
 GDPS_KEY=20854
